# Nota

Nota/: .qmlls.ini  CMakeLists.txt  Main.qml  MarkdownSection.qml  SideBar.qml  Theme.qml  VerticalBarButton.qml  WorkspaceSection.qml  main.cpp
Nota/NotesWorkspace/: NotesCheckBox.qml  NotesCheckToolBar.qml  NotesCheckView.qml  NotesTextArea.qml  NotesToolBar.qml  NotesToolBarButton.qml  qmldir
Nota/icons/: CMakeLists.txt
Nota/include/: Client.h  Driver.h  Server.h
Nota/playground/: .qmlls.ini  CMakeLists.txt  Main.qml  main.cpp
Nota/qml/: MarkdownSection.qml  NotesPage.qml  SideBar.qml  Theme.qml  VerticalBarButton.qml  WorkspaceSection.qml
Nota/qml/NotesWorkspace/: NotesTextArea.qml  NotesToolBar.qml  NotesToolBarButton.qml
Nota/resources/qml/: SideBar.qml  VerticalBarButton.qml
Nota/src/: Client.cpp  Driver.cpp  Server.cpp
